--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,13 @@
 subprojects {
   apply plugin: 'java'
+  
+  dependencies{
+  	 compile group: 'com.google.guava', name: 'guava', version: '21.0'
+  	 compile group: 'org.hamcrest', name: 'java-hamcrest', version: '2.0.0.0'
+  }
 
   repositories {
     jcenter()
+    mavenCentral()
   }
 }
